# bbbb

./: README.md  pyproject.toml  sdist.py
src/: bbbb.py
src/bbbb/: __init__.py  dev.py  wheel.py
src/bbbb_dev/: __init__.py
src/bbbb_dev/tests/: bbbb-dev.toml  test_all.py  test_self.py
src/bbbb_dev/tests/good-projects/: minimal-src-layout.toml
src/bbbb_dev/tests/good-projects/minimal-src-layout/: pyproject.toml
src/tests/: bbbb-dev.toml  test_self.py
test/: expected.toml  self_manifest.txt  self_wheel_manifest.txt  test_self.py  test_self_sdist.py
